# hass-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  pytest.ini  smithery.yaml
.github/workflows/: docker-build.yml  docker.yml  dockerhub-description.yml  pypi.yml  release.yml  test.yml
app/: __init__.py  __main__.py  areas.py  config.py  hass.py  hass_client.py  models.py  run.py  server.py  ws.py
app/prompts/: __init__.py  automation.py
app/tools/: __init__.py  entity.py  search.py  service.py  system.py
tests/: conftest.py  test_config.py  test_docker.py  test_hass.py  test_protocol.py  test_server.py  test_transports.py  test_ws.py
