[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hass-mcp-plus"
version = "0.2.0"
description = "Home Assistant Model Context Protocol (MCP) server - Enhanced fork with automation traces and improved token efficiency"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
keywords = ["home-assistant", "mcp", "model-context-protocol", "claude", "llm", "smart-home"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]

dependencies = [
    "mcp[cli]>=1.4.1",
    "httpx>=0.27.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
hass-mcp-plus = "app.run:main"
test = "pytest:main"

[project.urls]
Homepage = "https://github.com/rmaher001/hass-mcp-plus"
Repository = "https://github.com/rmaher001/hass-mcp-plus"
Issues = "https://github.com/rmaher001/hass-mcp-plus/issues"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
log_cli = true
log_cli_level = "INFO"
markers = [
    "asyncio: Tests that use asyncio"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
